# HistoCache

./: CMakeLists.txt  main.cpp
Hash/: HashTable.h
Histogram/: Histogram.cpp
Interface/: Interface.h
Sequences/: DynamicArray.h  LinkedList.h
